--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@ a:visited {
 a:link {
     color: rgb(247, 248, 196);
 }
+a:hover{
+    text-shadow: 1px 1px 1px #3a1e1e;
+}
 body{
     background-color: #000000;
     color: #a72323;
